nixidy/generated/prod/prometheus/HTTPRoute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  hostnames:
    - prometheus.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
